# penta

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  SECURITY.md  TERMS.md  package.json  pnpm-lock.yaml
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: components.json  index.html  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  store.ts  styles.css
apps/desktop/src/components/: AiPanel.tsx  CellViewer.tsx  ConfirmRiskDialog.tsx  ConnectionPanel.tsx  DataGrid.tsx  Explorer.tsx  LicensePanel.tsx  LocalDbPanel.tsx  Onboarding.tsx  PentaMark.tsx  QueryPanel.tsx  Toaster.tsx  ui.tsx
apps/desktop/src/lib/: aiSettings.ts  api.ts  autocomplete.ts  connString.ts  csv.ts  editorTheme.ts  feedback.ts  utils.ts
apps/website/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/website/src/: App.tsx  index.css  main.tsx
apps/website/src/components/: Ai.tsx  Button.tsx  ClosingCta.tsx  ConfirmDemo.tsx  Features.tsx  Footer.tsx  Hero.tsx  Marquee.tsx  Nav.tsx  PentaDraw.tsx  PentaMark.tsx  Pillars.tsx  Pricing.tsx  Reveal.tsx  Safety.tsx  ThemeToggle.tsx
crates/penta-core/: Cargo.toml
crates/penta-core/src/: ai.rs  connection.rs  error.rs  grid.rs  instance.rs  introspection.rs  io.rs  lib.rs  manager.rs  pg.rs  pool.rs  query.rs  safety.rs  store.rs
crates/penta-core/tests/: ai.rs  connections.rs  grid.rs  instance.rs  introspection.rs  io.rs  query.rs
crates/penta-license/: Cargo.toml
crates/penta-license/src/: lib.rs
crates/penta-vault/: Cargo.toml
crates/penta-vault/src/: crypto.rs  error.rs  keychain.rs  lib.rs  memory.rs
crates/penta-vault/tests/: vault.rs
docker/: docker-compose.yml
docs/: PRO.md
migrations/: 0001_init.sql
scripts/: gen-icon.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  license.rs  main.rs  state.rs
