[workspace]
resolver = "2"
members = [
    "crates/penta-core",
    "crates/penta-vault",
    "crates/penta-license",
    "src-tauri",
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
version = "0.0.1"
repository = "https://github.com/penta-dev/penta"
authors = ["Penta contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

# Keep the heavy Tauri dependency tree building quickly during development.
[profile.dev]
opt-level = 0
